# etsy-unified-os

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: sources.example.yaml  sources.yaml
data/: manifest.json
prompts/: claude_sonnet_design_prompt.md
src/etsy_unified_os/: cli.py  config.py  pipeline.py
src/etsy_unified_os/collectors/: github_collector.py  local_collector.py
